test/fail/debug.as
debug { 42 }; // error: result Int
